test/log/reduction/vardotacc_vv_u16_m.txt
vardotacc_vv_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_u16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vardotacc_vv_u16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vardotacc_vv_u16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vardotacc_vv_u16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vardotacc_vv_u16_m.c:22:6: warning: no previous prototype for 'vardotacc_vv_u16_m_golden' [-Wmissing-prototypes]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16_m.c: In function 'vardotacc_vv_u16_m_golden':
vardotacc_vv_u16_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vardotacc_vv_u16_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_u16_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vardotacc_vv_u16_m.c:22:41: warning: unused parameter 'src_mask' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                ~~~~~~~~~^~~~~~~~
vardotacc_vv_u16_m.c:22:59: warning: unused parameter 'dst_mask' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                  ~~~~~~~~~^~~~~~~~
vardotacc_vv_u16_m.c:22:78: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                                    ~~~~~~~~~~^
vardotacc_vv_u16_m.c:22:90: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                                                ~~~~~~~~~~^
vardotacc_vv_u16_m.c:22:102: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                                                            ~~~~~~~~~~^
vardotacc_vv_u16_m.c:22:114: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                                                                        ~~~~~~~~~~^~~~~~~~~~
vardotacc_vv_u16_m.c: In function 'main':
vardotacc_vv_u16_m.c:44:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   44 |     data_init_bool(src_mask, exp_src_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vardotacc_vv_u16_m.c:51:31: error: incompatible type for argument 1 of 'vardotacc_vv_u16_m_golden'
   51 |     vardotacc_vv_u16_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_result);
      |                               ^~~~~~~~~~~~
      |                               |
      |                               uint64_t * {aka long long unsigned int *}
vardotacc_vv_u16_m.c:22:41: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                ~~~~~~~~~^~~~~~~~
vardotacc_vv_u16_m.c:51:44: error: incompatible type for argument 2 of 'vardotacc_vv_u16_m_golden'
   51 |     vardotacc_vv_u16_m_golden(exp_src_mask,exp_dst_mask,exp_a,exp_b,exp_c,exp_result);
      |                                            ^~~~~~~~~~~~
      |                                            |
      |                                            uint64_t * {aka long long unsigned int *}
vardotacc_vv_u16_m.c:22:59: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vardotacc_vv_u16_m_golden(bool32_t src_mask,bool16_t dst_mask,uint32_t *a,uint16_t *b,uint16_t *c,uint32_t *exp_result) {
      |                                                  ~~~~~~~~~^~~~~~~~
vardotacc_vv_u16_m.c:59:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   59 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed